# Compressible-Lagrangian-Solver

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: CITATIONS.md  CONSERVATIVE_REMAPPING_REPORT.md  POROUS_BC_IMPLEMENTATION_REPORT.md  lagrangian_solver_methodology.tex
scripts/examples/: __init__.py  piston_compression.py  sod_shock_tube.py  toro_riemann_tests.py
scripts/flame_elongation_trajectory/: __init__.py  flame_coupled_piston_bc.py  flame_elongation_trajectory.py  flame_elongation_trajectory_plots.py  flame_property_interpolator.py  test_flame_coupled_piston.py
scripts/pele_reconstruction/: check_pele_velocities.py  check_results_difference.py  compare_results.py  debug_interface_state.py  diagnose_time_shift.py  pele_comparison.py  pele_data_loader.py  pele_pltfile_loader.py  porous_piston_bc.py  run_pele_reconstruction.py  synthetic_data_loader.py  synthetic_trajectory_gui.py  verify_fixed_bc.py  visualize_position_shift.py
src/lagrangian_solver/: __init__.py
src/lagrangian_solver/boundary/: __init__.py  base.py  open.py  piston.py  wall.py
src/lagrangian_solver/core/: __init__.py  grid.py  solver.py  state.py
src/lagrangian_solver/equations/: __init__.py  conservation.py  (+1 more)
tests/: __init__.py  test_av_import.py
tests/unit/: test_boundary.py  test_energy_conservation.py  test_eos.py  test_grid.py  test_porous_piston_bc.py
tests/verification/: __init__.py  debug_riemann_bc.py  output_manager.py  piston_shock_plots.py  test_artificial_heat_conduction.py  test_compatible_energy.py  test_toro_riemann.py  toro_riemann_plots.py
(+10 files in other folders)
